# simulatorRISCV

./: ALU.v  CMakeLists.txt  CalcImmediate.v  ControlUnit.v  Decoder.v  Hazard.v  Memory.v  MemoryData.v  MemoryInstruction.v  Ops.v  PCCounter.v  Pipeline.v  README.md  RegisterFile.v  Simulator.v  main.cpp  pipeline.v
test/: command  cycle.c
trace_result/: trace  trace.txt  traceInstr
